# chess_reporting

./: Full_report.md  chessreport.py  chessvision_to_fen.py  engine_commentary.py  games.json  html_to_chesser.py  image_to_fen.py  part0006.md  pyproject.toml
ChessVisionAI/: .gitignore  README.md  config.py  datagen.ipynb  detect_chessboard.ipynb  generate_dataset.py  infer.ipynb  litify.py  predict_board.ipynb  predict_board_lite.ipynb  train.ipynb  train_model.py  utils.py
grooten/: content.opf  fonts.css  stylesheet.css  titlepage.xhtml  toc.ncx
grooten/text/: part0000.html  part0001.html  part0002.html  part0003.html  part0004.html  part0005.html  part0006.html  part0007.html  part0008.html  part0009.html  part0010.html  part0011.html  part0012.html  part0013.html  part0014.html  part0015.html  part0016.html  part0017.html  part0018.html  part0019.html  part0020.html  part0021.html  part0022.html  part0023.html  part0024.html  part0025.html  part0026.html  part0027.html  part0028.html  part0029.html  part0030.html  part0031.html  part0032.html  part0033.html  part0034.html  part0035.html
