[project]
name = "chess"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-chess>=1.2.0",
    "requests>=2.32.5",
    "opencv-python>=4.10.0.0",
    "numpy>=2.0.0",
    "tensorflow>=2.15.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
